--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "gifenc": "github:mattdesl/gifenc#64842fca317b112a8590f8fef2bf3825da8f6fe3",
         "monaco-editor": "^0.43.0",
         "nanoid": "^4.0.2",
+        "openai": "^4.30.0",
         "virtual-merge": "^1.0.1"
     },
     "devDependencies": {
