--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,24 +44,37 @@ jobs:
         run: |
           rm -rf dist/*-unpacked dist/monaco Vencord.user.css vencordDesktopRenderer.css vencordDesktopRenderer.css.map
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: devbuild
-          release_name: DevBuild ${{ github.sha }}
-          draft: false
-          prerelease: false
+      - name: Get some values needed for the release
+        id: release_values
+        run: |
+          echo "release_tag=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: Upload release assets
-        id: upload-release-assets
-        uses: actions/upload-release-asset@v1
+      - name: Upload DevBuild as release
+        if: github.repository == 'cheesesamwich/Tobleronecord'
+        run: |
+          gh release upload devbuild --clobber dist/*
+          gh release edit devbuild --title "DevBuild $RELEASE_TAG"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/
-          asset_name: devbuild.zip
-          asset_content_type: application/zip
+          RELEASE_TAG: ${{ env.release_tag }}
+
+      - name: Upload DevBuild to builds repo
+        if: github.repository == 'cheesesamwich/Tobleronecord'
+        run: |
+          git config --global user.name "$USERNAME"
+          git config --global user.email actions@github.com
+
+          git clone https://$USERNAME:$API_TOKEN@github.com/$GH_REPO.git upload
+          cd upload
+
+          GLOBIGNORE=.git:.gitignore:README.md:LICENSE
+          rm -rf *
+          cp -r ../dist/* .
+
+          git add -A
+          git commit -m "Builds for https://github.com/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
+          git push --force https://$USERNAME:$API_TOKEN@github.com/$GH_REPO.git
+        env:
+          API_TOKEN: ${{ secrets.BUILDS_TOKEN }}
+          GH_REPO: cheesesamwich/builds
+          USERNAME: GitHub-Actions
