--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "ignorePatterns": ["dist", "browser", "packages/vencord-types"],
+    "ignorePatterns": ["dist", "browser"],
     "plugins": [
         "@typescript-eslint",
         "simple-header",
